# rfcontrolpy

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: check-format.yml  publish.yml  pypi-publish.yml  python-publish.yml
rfcontrol/: __init__.py  controller.py  helpers.py  rfcontrol_monitor.py
rfcontrol/protocols/: __init__.py  _skeleton.py  contact4.py  dimmer1.py  dimmer2.py  generic.py  generic2.py  pir1.py  pir2.py  pir3.py  pir4.py  pir6.py  shutter1  shutter1.py  switch1.py  switch10.py  switch11.py  switch2.py  switch25.py  switch3.py  switch4.py  switch5.py  switch6.py  switch7.py  switch8.py  weather13.py  weather19.py  weather4.py  weather5.py  weather7.py
tests/: __init__.py  test_controller.py  test_helpers.py
tests/protocols/: test_contact4.py  test_dimmer1.py  test_generic.py  test_generic2.py  test_pir1.py  test_pir2.py  test_pir3.py  test_pir4.py  test_pir6.py  test_switch1.py  test_switch10.py  test_switch11.py  test_switch2.py  test_switch25.py  test_switch3.py  test_switch4.py  test_switch5.py  test_switch6.py  test_switch7.py  test_switch8.py  test_weather13.py  test_weather19.py  test_weather4.py  test_weather5.py  test_weather7.py
